Fixing issues in landscape orientation on iOS

--- a/fresh_tomatoes.css
+++ b/fresh_tomatoes.css
@@ -298,3 +298,10 @@ a,
 		font-size: 32px;
 	}
 }
+
+@media (orientation: landscape) {
+	#trailer-video {
+		max-width: 60vw;
+		max-height: 40vw;
+	}
+}
